--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.5.1
   freezed_annotation: ^2.4.4
+  geolocator: ^11.1.0
+  http: ^1.2.2
   json_annotation: ^4.9.0
   riverpod_annotation: ^2.3.5
 
