add: iosとandroidにユーザー権限を記載

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>このアプリは天気情報を表示するために、あなたの現在地を必要としています。</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>このアプリは天気情報を表示するために、あなたの現在地を必要としています。</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
