--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: '>=3.4.3 <4.0.0'
 
 dependencies:
+  build: ^2.4.1
+  build_runner: ^2.4.11
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
@@ -21,7 +23,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  build_runner: ^2.4.11
   freezed: ^2.5.2
   json_serializable: ^6.8.0
   riverpod_generator: ^2.4.0
